--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   function gtag( ){dataLayer.push(arguments);}
   gtag('js', new Date());
   gtag('config', 'G-4FG4VTV4UT');
+  </script>
   </head>
   <body>
     <div id="root"></div>
