--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   gtag('js', new Date());
   gtag('config', 'G-4FG4VTV4UT');
   </script>
+    <!-- Force redeploy -->
+    
   </head>
   <body>
     <div id="root"></div>
